syntax = "proto3";

package test.bazel.proto;

import "test/bazel/proto/common/pizza.proto";
import "test/bazel/proto/common/delivery_person.proto";

import "google/protobuf/timestamp.proto";

service PizzaService {
  rpc OrderPizza(OrderPizzaRequest) returns (OrderPizzaResponse) {}
}


message OrderPizzaRequest {
  // The list of pizzas to order.
  repeated Pizza pizzas = 1;
}

message OrderPizzaResponse {
  // The person that will deliver the pizza.
  DeliveryPerson delivery_person = 1;
  // Time the delivery should arrive by.
  google.protobuf.Timestamp promised_time = 2;
}
